--- a/package.json
+++ b/package.json
@@ -7,39 +7,44 @@
     "start:demo": "es-dev-server --app-index demo/js/index.html --open",
     "build:basic": "rimraf dist && rollup -c demo/js/rollup.basic.config.js",
     "build:spa": "rimraf dist && rollup -c demo/js/rollup.spa.config.js",
-    "start:spa": "npm run build:spa & es-dev-server --root-dir dist --open"
+    "build:babelrc": "rimraf dist && rollup -c demo/babelrc/rollup.spa.config.js",
+    "start:spa": "npm run build:spa && es-dev-server --root-dir dist --open",
+    "start:babelrc": "npm run build:babelrc && es-dev-server --root-dir dist --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/plugin-proposal-dynamic-import": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.8.3",
     "@babel/plugin-syntax-optional-chaining": "^7.8.3",
+    "@babel/plugin-transform-modules-systemjs": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-modules": "^0.1.3",
     "@babel/runtime": "^7.8.7",
     "@open-wc/building-utils": "^2.15.1",
-    "@open-wc/rollup-plugin-html": "^0.2.0",
-    "@open-wc/rollup-plugin-polyfills-loader": "^0.1.0",
+    "@open-wc/rollup-plugin-html": "^0.3.0",
+    "@open-wc/rollup-plugin-polyfills-loader": "^0.2.0",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "acorn-optional-chaining": "0.0.3",
     "babel-plugin-bundled-import-meta": "^0.3.2",
     "babel-plugin-template-html-minifier": "^4.0.0",
     "deepmerge": "^4.2.2",
-    "rimraf": "^3.0.2",
     "rollup-plugin-babel": "^5.0.0-alpha.1",
     "rollup-plugin-terser": "^5.2.0",
     "rollup-plugin-workbox": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@open-wc/eslint-config": "^2.0.0",
     "@open-wc/prettier-config": "^0.1.10",
     "es-dev-server": "^1.43.0",
     "eslint": "^6.1.0",
     "lit-element": "^2.2.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.0.0"
   },
   "eslintConfig": {
