--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "babel-plugin-template-html-minifier": "^4.0.0",
     "browserslist": "^4.9.1",
     "deepmerge": "^4.2.2",
+    "parse5": "^5.1.1",
     "rollup-plugin-babel": "^5.0.0-alpha.1",
     "rollup-plugin-terser": "^5.2.0",
-    "rollup-plugin-workbox": "^5.0.1"
+    "rollup-plugin-workbox": "^5.0.1",
+    "terser": "^4.6.7"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
