--- a/package.json
+++ b/package.json
@@ -19,17 +19,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/helper-module-imports": "^7.8.3",
+    "@babel/helpers": "^7.9.2",
     "@babel/plugin-proposal-dynamic-import": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-import-meta": "^7.8.3",
     "@babel/plugin-syntax-optional-chaining": "^7.8.3",
-    "@babel/plugin-transform-modules-systemjs": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/plugin-transform-modules-amd": "^7.9.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.0",
+    "@babel/plugin-transform-modules-systemjs": "^7.9.0",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-modules": "^0.1.3",
-    "@babel/runtime": "^7.8.7",
+    "@babel/runtime": "^7.9.2",
     "@open-wc/building-utils": "^2.15.1",
     "@open-wc/rollup-plugin-html": "^0.3.3",
     "@open-wc/rollup-plugin-polyfills-loader": "^0.4.3",
@@ -39,6 +44,7 @@
     "babel-plugin-template-html-minifier": "^4.0.0",
     "browserslist": "^4.9.1",
     "deepmerge": "^4.2.2",
+    "magic-string": "^0.25.7",
     "parse5": "^5.1.1",
     "rollup-plugin-babel": "^5.0.0-alpha.1",
     "rollup-plugin-terser": "^5.2.0",
@@ -46,6 +52,7 @@
     "terser": "^4.6.7"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@open-wc/eslint-config": "^2.0.0",
     "@open-wc/prettier-config": "^0.1.10",
